--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.14.0",
+    "@tanstack/react-query": "^5.40.1",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
